--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -51,7 +51,7 @@ jobs:
         cd ..
         DATEE=`date '+[%Y-%m-%d]'`
         mv Release HDLBInst$DATEE
-        zip -r HDLBInst\[$SCH\] HDLBInst*/*
+        7z a -t7z -r HDLBInst\[$SCH\].7z HDLBInst*/*
         ls -R
 
 
@@ -66,7 +66,7 @@ jobs:
         echo `date`>>commit.sys
         cd ..
         mv Release 'HDLBInst[$REF]'
-        zip -r 'HDLBInst\[$REF\]' HDLBInst*/*
+        7z a -t7z -r HDLBInst\[$REF\].7z HDLBInst*/*
 
     - name: Get Branch name if making tagged release
       if: startsWith(github.ref, 'refs/heads/V')
@@ -80,7 +80,7 @@ jobs:
       with:
         name: HDL-INST
         path: |
-             HDLBInst*.zip
+             HDLBInst*.7z
 
     - name: Create pre-release
       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
@@ -90,7 +90,7 @@ jobs:
         automatic_release_tag: "Latest"
         title: "Latest Version"
         files: |
-              HDLBInst*.zip
+              HDLBInst*.7z
 
     - name: Create tagged release
       if: startsWith(github.ref, 'refs/heads/V')
@@ -100,4 +100,4 @@ jobs:
         prerelease: false
         automatic_release_tag: ${{ steps.extract_branch.outputs.branch }}
         files: |
-            HDL-Batch-installer/_bin/*.zip
+            HDLBInst*.7z
