--- a/.github/workflows/translators_webhooks.yml
+++ b/.github/workflows/translators_webhooks.yml
@@ -1,4 +1,4 @@
-name: github webhook system
+name: Ping translators on discord
 on:
   workflow_dispatch:
   push:
@@ -12,4 +12,4 @@ jobs:
       uses: tsickert/discord-webhook@v2.0.2
       with:
         webhook-url: ${{ secrets.TRANSLATORS_WEBHOOK }}
-        content: "@Translators, the translation template has been updated 1 minute ago"
+        content: "{@Translators} , the translation template has been updated 1 minute ago"
