--- a/.github/workflows/tagged_releasw_webhook.yml
+++ b/.github/workflows/tagged_releasw_webhook.yml
@@ -9,18 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - uses: actions/checkout@v2
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - uses: actions/checkout@v2
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        
+      - name: Test
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
 
-    - name: Test
-      run: |
-        echo $RELEASE_VERSION
-        echo ${{ env.RELEASE_VERSION }}
-
-    - name: Discord Webhook, tagged release
-      uses: tsickert/discord-webhook@v2.0.2
-      with:
-        webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
-        content: "Hey <@everyone>! **HDL Batch installer**  **${{ env.RELEASE_VERSION }}** has been released! \\n - \\n <@&859615291477590046> ,"
+      - name: Discord Webhook tagged release
+        uses: tsickert/discord-webhook@v2.0.2
+        with:
+          webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
+          content: "Hey <@everyone>! **HDL Batch installer**  **${{ env.RELEASE_VERSION }}** has been released! \\n - \\n <@&859615291477590046> ,"
 
