--- a/.github/workflows/translators_webhooks.yml
+++ b/.github/workflows/translators_webhooks.yml
@@ -6,6 +6,7 @@ on:
       - 'translations/HDLBinst.pot'
 jobs:
   message:
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
     - name: Discord Webhook Action
