fix images (i hope so)

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: HDL Batch Installer
-description: HDLBInst is a GUI for HDL-dump
+description: A GUI for HDL-dump
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
