try 2 fix images (again)

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ google_analytics:
 theme: jekyll-theme-slate
 github:
       zip_url: https://github.com/israpps/HDL-Batch-installer/releases
-      discord_url: https://discord.gg/wczxvrkZk6
+      tar_url: https://discord.gg/wczxvrkZk6
