--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -36,14 +36,13 @@ jobs:
 
     - name: get version from changelog
       shell: bash
-      run: echo ::set-env name=VERSION::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//')
-      id: string
-      
+      run: echo "::set-output name=string::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//')"
+      id: version
     - name: get version from changelog as release tag
       shell: bash
-      run: echo ::set-env name=VERSION_TAG::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Revision/rev/')
+      run: echo "::set-output name=version_tag::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Revision/rev/')
       id: tag
-
+        
     - name: update HDL.EXE
       run: |
         cd Release
@@ -66,7 +65,7 @@ jobs:
         cd ..
         cd ..
         DATEE=`date '+[%Y-%m-%d]'`
-        mv Release HDLBInst\[${{ env.VERSION }}\]
+        mv Release HDLBInst\[${{ steps.version.outputs.string }}\]
         7z a -t7z -r HDLBInst\[$DATEE\].7z HDLBInst*/*
         ls -R
 
@@ -82,7 +81,7 @@ jobs:
         echo tagged release $REF>>commit.sys
         echo `date`>>commit.sys
         cd ..
-        mv Release 'HDLBInst[${{ env.VERSION }}]-$DATEE'
+        mv Release 'HDLBInst[${{ steps.version.outputs.string }}]-$DATEE'
         7z a -t7z -r HDLBInst\[$REF\].7z HDLBInst*/*
 
     - name: Upload artifacts
@@ -100,7 +99,7 @@ jobs:
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "Latest"
-        title: "${{ env.VERSION }}"
+        title: "${{ steps.version.outputs.string }}"
         files: |
               HDLBInst*.7z
               Translation-template.7z
@@ -111,8 +110,8 @@ jobs:
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
-        automatic_release_tag: ${{ env.VERSION_TAG }}
-        title: "${{ env.VERSION }}"
+        automatic_release_tag: ${{ steps.tag.outputs.version_tag }}
+        title: "${{ steps.version.outputs.string }}"
         files: |
             HDLBInst*.7z
             Translation-template.7z
@@ -128,4 +127,4 @@ jobs:
 #      uses: tsickert/discord-webhook@v2.0.2
 #      with:
 #        webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
-#        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer has been updated some minutes ago \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest "
+#        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer has been updated some minutes ago\\n according to changelog: **${{ steps.version.outputs.string }}** \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest "
