--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -38,6 +38,7 @@ jobs:
       shell: bash
       run: echo "::set-output name=string::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | awk '{$1=$1;print}')"
       id: version
+      
     - name: get version from changelog as release tag
       shell: bash
       run: echo "::set-output name=version_tag::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Revision/rev/' | awk '{$1=$1;print}')"
@@ -122,6 +123,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - name: checkout code for release
+      uses: actions/checkout@v1
+
+    - name: get version from changelog
+      shell: bash
+      run: echo "::set-output name=string::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | awk '{$1=$1;print}')"
+      id: version
+
+    - name: Download 1.966 artifact
+      uses: actions/download-artifact@v1
+      with:
+        name: HDL-INST
+        
     - name: Discord Webhook, Latest release
       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
       uses: tsickert/discord-webhook@v2.0.2
@@ -135,5 +149,5 @@ jobs:
       env:
         DISCORD_WEBHOOK: ${{ secrets.BACKUP_WEBHOOK }}
       with:
-        args: HDLBInst*.7z
+        args: HDL-INST/HDLBInst*.7z
         
