--- a/.github/ISSUE_TEMPLATE/Feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature_request.yml
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for collaborating with our project! Please provide the following data:
+        "Thanks for collaborating with our project! Please provide the following data:"
       
   - type: textarea
     id: explanation
@@ -24,7 +24,7 @@ body:
     id: checks
     attributes:
       label: fature related
-      description: this Feature request is related to:
+      description: "this Feature request is related to:"
       options:
         - label: game Installation
         - label: Title Database
