--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -122,6 +122,7 @@ jobs:
 
   discord_webhooks:
     needs: Repack_and_Release
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
 
@@ -144,14 +145,21 @@ jobs:
         name: HDL-INST
         
     - name: Discord Webhook, Latest release
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+      if: github.event_name == 'push'
       uses: tsickert/discord-webhook@v2.0.2
       with:
         webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
         content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer has been updated some minutes ago\\n according to changelog: **[${{ steps.version.outputs.string }}]** \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
         
+    - name: Discord Webhook, Latest release
+      if: github.event_name == 'repository_dispatch'
+      uses: tsickert/discord-webhook@v2.0.2
+      with:
+        webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
+        content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer **[${{ steps.version.outputs.string }}]** Has been **re-released** because **HDL Dump was updated** some minutes ago \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
+        
+        
     - name: Upload release to discord backup
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
       uses: sinshutu/upload-to-discord@master
       env:
         DISCORD_WEBHOOK: ${{ secrets.BACKUP_WEBHOOK }}
