--- a/.github/workflows/translators_webhooks.yml
+++ b/.github/workflows/translators_webhooks.yml
@@ -13,4 +13,4 @@ jobs:
       uses: tsickert/discord-webhook@v2.0.2
       with:
         webhook-url: ${{ secrets.TRANSLATORS_WEBHOOK }}
-        content: "<@&859525897656729611>, The translation template has been updated! \\n as always, you can download it from github or using the automatic download batch file pinned on <#859593073466015765> "
+        content: "<@&859525897656729611>, The translation template has been updated! \\n as always, you can download it from github https://github.com/israpps/HDL-Batch-installer/releases/download/Latest/Translation-template.7z \\n or using the automatic download batch file pinned on <#859593073466015765> "
