--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -44,16 +44,22 @@ jobs:
       run: echo "::set-output name=version_tag::$(grep -m1 '\[*\]' Release/changes.log | sed 's/\[//' | sed 's/\]//' | sed -r 's/\s+//g' | sed 's/Revision/rev/' | awk '{$1=$1;print}')"
       id: tag
         
-    - name: update HDL.EXE
+    - name: Download Latest HDL-Dump
       run: |
         cd Release
         wget https://github.com/israpps/hdl-dump/releases/download/hdlinst/HDL.EXE -O $PWD/HDL.EXE
     
-    - name: Repack translation templates
+    - name: Create translation template package
       run: |
          DATEE=`date '+[%Y-%m-%d]'`
          mv translations HDLBinst-Translation-$DATEE
          7z a -t7z -r Translation-template.7z HDLBinst-Translation-*/*.pot
+
+    - name: Compile translation catalogs
+      run: |
+         msgfmt translations/catalogs/pt_BR.po -o Release/Lang/pt_BR/HDLBinst.mo
+         msgfmt translations/catalogs/es.po -o Release/Lang/es/HDLBinst.mo
+         msgfmt translations/catalogs/it_IT.po -o Release/Lang/it/HDLBinst.mo
 
     - name: Repack as latest build
       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
@@ -96,7 +102,7 @@ jobs:
              HDLBInst*.7z
              Translation-template.7z
 
-    - name: Create pre-release
+    - name: Deploy pre-release
       if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
       uses: marvinpinto/action-automatic-releases@latest
       with:
@@ -107,7 +113,7 @@ jobs:
               HDLBInst*.7z
               Translation-template.7z
 
-    - name: Create tagged release
+    - name: Deploy tagged release
       if: startsWith(github.ref, 'refs/heads/v')
       uses: marvinpinto/action-automatic-releases@latest
       with:
