--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apk add gettext p7zip
+        sudo apt-get install gettext p7zip
 
     - name: checkout code for release
       uses: actions/checkout@v1
