--- a/Release/Common/config.INI
+++ b/Release/Common/config.INI
@@ -1,7 +1,10 @@
-DataBase_Mode=0
+[Init]
 Debug_level=5
-MiniOPL=1
+Language=0
+[Game_search]
 Default_iso_path=C:\\
-OSD_Hide=0
-language=0
+[Installation]
+DataBase_Mode=0
+MiniOPL=1
 Default_dma=7
+OSD_Hide=0
