--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -125,7 +125,8 @@ jobs:
         files: |
              HDLBInst*.7z
              Translation-template.7z
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   discord_webhooks:
     needs: Repack_and_Release
