--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -69,9 +69,8 @@ jobs:
       run: |
         cd Release
         sed -n '/Change log/,/^$/{/^$/q; p}' changes.log > ../latest_changes.log
-        sed -n '/Change log/,/^$/{/^$/q; p}' changes.log 
         cd ..
-        sed 's/^[[:blank:]]*//g' latest_changes.log > latest_changes.log
+        sed -i 's/^[[:blank:]]*//g' latest_changes.log
         cat latest_changes.log
 
     - name: Repack latest x64 build
