--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -67,10 +67,12 @@ jobs:
 
     - name: Trim changes of latest version
       run: |
+        echo "```console" > latest_changes.log
         cd Release
-        sed -n '/Change log/,/^$/{/^$/q; p}' changes.log > ../latest_changes.log
+        sed -n '/Change log/,/^$/{/^$/q; p}' changes.log >> ../latest_changes.log
         cd ..
         sed -i 's/^[[:blank:]]*//g' latest_changes.log
+        echo "```" > latest_changes.log
         cat latest_changes.log
 
     - name: Repack latest x64 build
